Add dev script on package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "repository": "https://github.com/Alishgiri/node_objection.git",
   "author": "Alish Giri <32293725+Alishgiri@users.noreply.github.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon app.js"
+  },
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.95.2",
