--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "Alish Giri <32293725+Alishgiri@users.noreply.github.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "migrate:make": "npx knex migrate:make --knexfile ./db/knexfile.js",
+    "migrate": "npx knex migrate:latest --knexfile ./db/knexfile.js"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -18,3 +20,4 @@
     "nodemon": "^2.0.7"
   }
 }
+ 
