--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon app.js",
+    "seed:run": "npx knex seed:run --knexfile ./db/knexfile.js",
+    "seed:make": "npx knex seed:make --knexfile ./db/knexfile.js",
     "migrate:make": "npx knex migrate:make --knexfile ./db/knexfile.js",
     "migrate": "npx knex migrate:latest --knexfile ./db/knexfile.js"
   },
