--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "dev": "nodemon app.js",
     "seed:run": "npx knex seed:run --knexfile ./db/knexfile.js",
     "seed:make": "npx knex seed:make --knexfile ./db/knexfile.js",
-    "migrate:make": "npx knex migrate:make --knexfile ./db/knexfile.js",
-    "migrate": "npx knex migrate:latest --knexfile ./db/knexfile.js"
+    "migrate": "npx knex migrate:latest --knexfile ./db/knexfile.js",
+    "migrate:down": "npx knex migrate:down --knexfile ./db/knexfile.js",
+    "migrate:make": "npx knex migrate:make --knexfile ./db/knexfile.js"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -22,4 +23,3 @@
     "nodemon": "^2.0.7"
   }
 }
- 
